--- a/CSS/gameScreen.css
+++ b/CSS/gameScreen.css
@@ -5,10 +5,24 @@ body, html {
         overflow: hidden;
 }
 
-.container {
-        width: 70%;
+* { box-sizing: border-box; }
+
+.rollBtn{
+  width: 70px;
+  height: 70px;
+}
+
+.dice-container {
+        width: 350px;
+/*        border: 1px solid black;*/
         margin: auto;
         text-align: center;
+        float: left;
+}
+
+.rollOutcome p{
+    
+    display: inline;
 }
 
 .dice {
@@ -24,6 +38,15 @@ img {
 .rollBtn{
   width: 70px;
   height: 70px;
+}
+
+.container-grid {
+    margin: 2% auto auto 30%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto auto;
+    max-width: 538px;
+    background-color: #BFBFBF;
 }
 
 .tile {
