--- a/CSS/gameScreen.css
+++ b/CSS/gameScreen.css
@@ -5,7 +5,7 @@ body, html {
         overflow: hidden;
 }
 
-* { box-sizing: border-box; }
+
 
 .rollBtn{
   width: 70px;
@@ -14,7 +14,6 @@ body, html {
 
 .dice-container {
         width: 350px;
-/*        border: 1px solid black;*/
         margin: auto;
         text-align: center;
         float: left;
@@ -55,6 +54,7 @@ body, html {
     grid-template-columns: auto auto auto auto auto auto auto;
     grid-template-rows: auto auto auto auto auto auto auto;
     max-width: 538px;
+    max-height: 5375px;
     background-color: #BFBFBF;
 }
 
@@ -67,6 +67,15 @@ body, html {
     align-items: center;
     font-size: 50px;
 }
+
+.winning-tile {
+    width: 150px;
+    height: 150px;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    text-align: center;
+}
+
 
 
 
